@@ -2,6 +2,7 @@ Changelog for tagLister.
 
 tagLister 1.1.0
 ===============
+- Added toLower property to tagLister snippet to allow case-insensitive tag listing
 - Added extraParams property to tolinks snippet
 
 tagLister 1.0.3
